1. Collection API Улучшения [#245136]