@@ -1,9 +1,6 @@
 package ru.job4j.collection;
 
 import org.junit.Test;
-
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -14,12 +11,12 @@ public class FullSearchTest {
 
     @Test
     public void extractNumber() {
-        List<TaskSet> tasks = Arrays.asList(
+        List<TaskSet> tasks = List.of(
                 new TaskSet("1", "First desc"),
                 new TaskSet("2", "Second desc"),
                 new TaskSet("1", "First desc")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
+        Set<String> expected = Set.of("1", "2");
         assertThat(FullSearch.extractNumber(tasks), is(expected));
     }
 }
