@@ -13,7 +13,7 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(new Account("123", "Petr Arsentev", "eDer3432f"), new Account("142", "Petr Arsentev", "000001"));
+        List<Account> accounts = List.of(new Account("123", "Petr Arsentev", "eDer3432f"), new Account("142", "Petr Arsentev", "000001"));
         HashSet<Account> expect = new HashSet<>(Arrays.asList(new Account("123", "Petr Arsentev", "eDer3432f"), new Account("142", "Petr Arsentev", "000001")));
         assertThat(NotifyAccount.sent(accounts), is(expect));
     }
